# ot_harjoitustyo

./: README.md
Collecting-app/: .gitignore  pyproject.toml  tasks.py
Collecting-app/Dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
Collecting-app/Dokumentaatio/Oma/: create_user_view copy.py  create_user_view copy2.py  login_view copy.py  login_view_testi.py  testi.py  user_view copy.py
Collecting-app/src/: database_connection.py  index.py  initialize_database.py  pyproject.toml
Collecting-app/src/Tests/repositories/: user_repository_test.py
Collecting-app/src/data/: database.sqlite
Collecting-app/src/entities/: user.py
Collecting-app/src/repositories/: collecting_repository.py  user_repository copy.py  user_repository.py
Collecting-app/src/services/: collecting_service.py  user_service.py
Collecting-app/src/sourceCode/: user.py
Collecting-app/src/tests/repositories/: user_repository_test.py
Collecting-app/src/tests/services/: user_service_test.py
Collecting-app/src/ui/: Login_View.py  add_view copy.py  add_view.py  create_user_view.py  gui.py  login_view.py  project_view copy.py  project_view.py  testi.py  ui.py  user_view.py
Dokumentaatio/: tuntikirjanpito.md
laskarit/Unicafe copy/: pyproject.toml
laskarit/viikko2/: .gitignore  pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko3/: Monopoli.md  sekvenssikaavio.md
(+3 files in other folders)
