[tool.poetry]
name = "collecting-app"
version = "0.1.0"
description = ""
authors = ["kety <kety.kuusaru@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "1.0"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
